--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.4",
+    "pdfkit": "^0.15.1",
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
