--- a/back-end/package.json
+++ b/back-end/package.json
@@ -21,7 +21,11 @@
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "jest": "^29.7.0",
+    "mocha": "^11.0.1",
+    "sinon": "^19.0.2",
+    "sinon-chai": "^4.0.0",
     "supertest": "^7.0.0"
   }
 }
