--- a/front-end/oficina-front/package.json
+++ b/front-end/oficina-front/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "oficina-front": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -18,7 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:e2e": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +37,11 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^13.15.2"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
+    "cypress": "^13.16.1",
+    "jest": "^27.5.1"
   }
 }
