--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha tests/**/*.test.js",
     "start": "node app.js"
   },
   "keywords": [],
@@ -21,7 +21,7 @@
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
+    "chai": "^4.5.0",
     "jest": "^29.7.0",
     "mocha": "^11.0.1",
     "sinon": "^19.0.2",
